Mar-2021/kuard-pod-rp-enabled.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: kuard-pod-rp-enabled
  name: kuard-pod-rp-enabled
spec:
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:1
    name: kuard
    readinessProbe:
      httpGet:
        path: /ready
        port: 8080
      periodSeconds: 2
      initialDelaySeconds: 5
      failureThreshold: 3
      successThreshold: 1
