Mar-2021/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    pod: nginx
spec:
  containers:
  - image: nginx
    name: nginx-pod
