Mar-2021/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: api.aws.amazon.com
  ports:
  - port: 80
    protocol: TCP
