Mar-2021/kuard-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard-sts-svc
  labels:
    app: kuard-sts
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    app: kuard-sts
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kuard-sts
spec:
  serviceName: kuard-sts-svc
  replicas: 2
  selector:
    matchLabels:
      app: kuard-sts
  template:
    metadata:
      labels:
        app: kuard-sts
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:1
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      resources:
        requests:
          storage: 10Gi
      accessModes:
      - ReadWriteOnce
