Mar-2021/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  clusterIP: None
  selector:
    pod: nginx
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
