Mar-2021/deny-all-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-netpol
spec:
  podSelector: {}
  policyTypes:
  - Ingress
