Mar-2021/test-ns-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-ns-netpol
spec:
  podSelector:
    matchLabels:
      env: qa
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: dev
